# model-synthesis

./: CMakeLists.txt  Model Synthesis.cpp
src/: synthesizer.cpp
src/parseInput/: InputSettings.h  parseInput.cpp  parseSimpleTiled.cpp
src/propagator/: PropagatorAc4.cpp  PropagatorAc4.h
